--- a/easy-book/src/app/dashboard/main/main.component.html
+++ b/easy-book/src/app/dashboard/main/main.component.html
@@ -1,19 +1,29 @@
 <mat-sidenav-container fullscreen>
-  <mat-sidenav mode="side" opened>
-    <mat-toolbar color="primary">Hotel Admin</mat-toolbar>
+  <mat-sidenav
+    mode="side"
+    opened
+    style="width: fit-content; background: #00458f; color: aliceblue"
+  >
+    <mat-toolbar color="primary">Hi Jhon</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="users" *ngIf="isAdmin()">Users</a>
-      <a mat-list-item routerLink="rooms" *ngIf="isAdmin()">Rooms</a>
-      <a mat-list-item routerLink="bookings">Bookings</a>
+      <a mat-list-item routerLink="users" *ngIf="isAdmin()"
+        ><span class="white-text">Users</span></a
+      >
+      <a mat-list-item routerLink="rooms" *ngIf="isAdmin()"
+        ><span class="white-text">Room</span></a
+      >
+      <a mat-list-item routerLink="bookings"
+        ><span class="white-text">Bookings</span></a
+      >
       <a mat-list-item routerLink="notifications" *ngIf="isAdmin()"
-        >Notifications</a
+        ><span class="white-text">Notifications</span></a
       >
     </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <span>Welcome to Hotel Booking System</span>
+    <mat-toolbar style="display: flex; justify-content: center" color="primary">
+      <span>Hotel Booking System</span>
     </mat-toolbar>
     <div class="main-content">
       <router-outlet></router-outlet>
