add proxy endpoint

--- a/easy-book/src/app/dashboard/main/main.component.html
+++ b/easy-book/src/app/dashboard/main/main.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav
     mode="side"
     opened
-    style="width: fit-content; background: #00458f; color: aliceblue"
+    style="width: fit-content; background: #00458f; color: aliceblue; border-radius: 0;"
   >
     <mat-toolbar color="primary">Hi Jhon</mat-toolbar>
     <mat-nav-list>
