dialog box title

--- a/easy-book/src/app/rooms/edit-room/edit-room.component.html
+++ b/easy-book/src/app/rooms/edit-room/edit-room.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title class="text-center">Add New Room</h1>
+<h1 mat-dialog-title class="text-center">{{title}}</h1>
 <div mat-dialog-content>
   <mat-form-field class="w-100" appearance="fill">
     <mat-label>Room Number</mat-label>
