--- a/easy-book/src/app/rooms/room-management/room-management.component.html
+++ b/easy-book/src/app/rooms/room-management/room-management.component.html
@@ -1,7 +1,7 @@
 <mat-card class="p-2" style="height: 93vh;">
   <div class="header">
     <h3>Room Availability</h3>
-    <button mat-raised-button color="primary" (click)="openAddRoom()">+ Add Room</button>
+    <button mat-raised-button color="primary" (click)="openAdd()">+ Add Room</button>
   </div>
   <table mat-table [dataSource]="rooms" class="mat-elevation-z8">
     <ng-container matColumnDef="roomNumber">
@@ -22,10 +22,10 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let room">
-        <button mat-icon-button color="accent" (click)="editRoom(room)">
+        <button mat-icon-button color="accent" (click)="edit(room)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" (click)="deleteRoom(room.id)">
+        <button mat-icon-button color="warn" (click)="delete(room.id)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
