--- a/easy-book/src/app/bookings/booking-dashboard/booking-dashboard.component.html
+++ b/easy-book/src/app/bookings/booking-dashboard/booking-dashboard.component.html
@@ -1,7 +1,9 @@
 <mat-card>
   <div class="header">
     <h3>Booking Dashboard</h3>
-    <button mat-raised-button color="primary">+ New Booking</button>
+    <button mat-raised-button color="primary" (click)="openBookingCreation()">
+      + New Booking
+    </button>
   </div>
   <table mat-table [dataSource]="bookings" class="mat-elevation-z8">
     <ng-container matColumnDef="bookingId">
