--- a/easy-book/src/app/users/user-management/user-management.component.html
+++ b/easy-book/src/app/users/user-management/user-management.component.html
@@ -1,7 +1,9 @@
 <mat-card>
   <div class="header">
     <h3>User Management</h3>
-    <button mat-raised-button color="primary">+ Add New User</button>
+    <button mat-raised-button color="primary" (click)="openSignupDialog()">
+      + Add New User
+    </button>
   </div>
   <table mat-table [dataSource]="users" class="mat-elevation-z8">
     <ng-container matColumnDef="name">
@@ -15,9 +17,9 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let user">
-        <button mat-icon-button color="accent">
+        <!-- <button mat-icon-button color="accent">
           <mat-icon>edit</mat-icon>
-        </button>
+        </button> -->
         <button mat-icon-button color="warn">
           <mat-icon>delete</mat-icon>
         </button>
