set interval to reload page

--- a/easy-book/src/app/dashboard/main/main.component.html
+++ b/easy-book/src/app/dashboard/main/main.component.html
@@ -4,7 +4,7 @@
     opened
     style="width: fit-content; background: #00458f; color: aliceblue; border-radius: 0;"
   >
-    <mat-toolbar color="primary">Hi Jhon</mat-toolbar>
+    <mat-toolbar color="primary">Hi Admin</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="users" *ngIf="isAdmin()"
         ><span class="white-text">Users</span></a
