--- a/easy-book/src/app/dashboard/main/main.component.html
+++ b/easy-book/src/app/dashboard/main/main.component.html
@@ -18,6 +18,9 @@
       <a mat-list-item routerLink="notifications" *ngIf="isAdmin()"
         ><span class="white-text">Notifications</span></a
       >
+      <a mat-list-item routerLink="dashbaord"
+        ><span class="white-text">Dashboard</span></a
+      >
     </mat-nav-list>
   </mat-sidenav>
 
